--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,9 +10,12 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-       
+        text: About
+      - href: research.qmd
+        text: Research
       
 format:
+
   html:
     theme:
       - cosmo
